--- a/Makefile.x86
+++ b/Makefile.x86
@@ -10,7 +10,7 @@ $(if $(GOROOT),,$(error GOROOT is not set!))
 	PLATFORMDEPENDENT=
 endif
 
-STRATUX_SRC=main/gen_gdl90.go main/traffic.go main/gps.go main/network.go main/managementinterface.go main/sdr.go main/ping.go main/uibroadcast.go main/monotonic.go main/datalog.go main/equations.go main/sensors.go main/cputemp.go main/lowpower_uat.go main/ogn.go main/flarm-nmea.go main/networksettings.go main/xplane.go
+STRATUX_SRC=main/gen_gdl90.go main/traffic.go main/gps.go main/network.go main/managementinterface.go main/sdr.go main/ping.go main/uibroadcast.go main/monotonic.go main/datalog.go main/equations.go main/sensors.go main/cputemp.go main/lowpower_uat.go main/ogn.go main/flarm-nmea.go main/networksettings.go main/xplane.go main/devicemanager.go main/serial.go
 FANCONTROL_SRC=main/fancontrol.go main/equations.go main/cputemp.go
 
 all: xdump978 xdump1090 gen_gdl90 $(PLATFORMDEPENDENT)
