--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "make gen_gdl90",
+            "command": "make gen_gdl90 DEBUG=true",
             "problemMatcher": "$go",
             "group": {
                 "kind": "build",
