--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "program": "${workspaceRoot}/gen_gdl90",
             "env": {"CGO_CFLAGS_ALLOW": "-L${workspaceRoot}"},
             "args": ["-log_dir", "/tmp/", "-logtostderr"],
-            "preLaunchTask": "Build",
+            "preLaunchTask": "PreStart",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
